adding doctor speach files

--- a/scriboto-app/templates/results.html
+++ b/scriboto-app/templates/results.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <title>Scriboto App Results</title>
- 
- 
+
+
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
+
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
- 
- 
+
+
 </head>
- 
+
 <body>
- 
+
     <div class="container">
         <div class="header">
             <nav>
@@ -24,17 +24,18 @@
             </nav>
             <h3 class="text-muted">Scriboto App User Interface - EHR Summary</h3>
         </div>
- 
+
         <div class="jumbotron">
             <h1>Scriboto App</h1>
             <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="showHome" role="button">Return Home</a>
+            <p><a class="btn btn-lg btn-success" href="drSpeak" role="button">Doctor Speak</a>
             </p>
         </div>
- 
+
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4>HPI</h4><p>okay and how long has that been going <br> I've had it for about a month now <br> it sound worse over the last <br> so did anything happen did anything trigger it <br> just got to start noticing about a month ago <br> it's getting worse <br> he described it for me <br> I feel like I'm gasping for air <br> getting worse with Ronnie <br> does it happen also when <br> you're comes hanging out at rest <br> okay and then <br> do you have any problems with coughing or wheezing any other breathing issues <br> not really I know <br> it's hard to sleep sometime okay <br> it's been only going on for that month and then just worse in the five days okay have you been sick recently <br> yeah that she sick of <br> any other problems any fevers <br> any chest pain anything else that you worried about so <br> with the cold <br> I thought I had a fever I just can't use my hands <br> and I'm have you ever been <br> have you ever been on inhaler <br> and how long ago would you say <br> and you mentioned that this happens when you're running do you notice that it happened <br> after I warm up so I don't want my 16 okay at first and then <br> it gets progressively worse. <br> so I did go in <br> why was 22 years old <br> or a surgery they said there was some <br> not really just something <br> any other time like at night time when you said you had coffee <br> fracture site I'm sorry for <br> coughing and wheezing and then about 20-30 minutes before you exercise or just to prevent that from <br> and then</p><h4>PMH</h4><p>diagnosed with asthma or had any hospitalizations for this <br> anything in your medical history I should know about like any diseases or big surgeries or hospitalization <br> I've been in any drug used for alcoholism <br> asthma <br> once you have any problems if he albuterol isn't cutting</p><h4>PE</h4><p>and what we're going to do first is do a <br> check that test with you</p>            </div>
+<h4>family history</h4><p>father mother Finger I'm in a lot of pain</p>            </div>
  
         </div>
  
