--- a/scriboto-app/templates/results_drSpeak.html
+++ b/scriboto-app/templates/results_drSpeak.html
@@ -35,7 +35,7 @@
 
         <div class="row marketing">
             <div class="col-lg-6">
-<h4>family history</h4><p></p>            </div>
+<h4>HPI</h4><p>sore throat <br> one words I wanted go</p><h4>PMH</h4><p>testosterone nasal congestion</p><h4>social history</h4><p></p><h4>MISC</h4><p> <br> left right <br> arm <br> eye doctor</p>            </div>
  
         </div>
  
