--- a/scriboto-app/templates/results.html
+++ b/scriboto-app/templates/results.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Scriboto Results</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -44,9 +44,9 @@ body, html {
 <!-- Menu Container -->
 <div class="w3-container" id="menu">
   <div class="w3-content" style="max-width:700px">
- 
+
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Results</span></h5>
-  
+
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Transcription');" id="myLink">
         <div class="w3-col s6 tablink">Transcription</div>
@@ -57,10 +57,10 @@ body, html {
     </div>
 
     <div id="Transcription" class="w3-container menu w3-padding-48 w3-card">
-      <h5>instructions</h5><p class="w3-text-grey">hate him or love him you got to respect the work ethic</p><h5>MISC</h5><p class="w3-text-grey">all right <br> that's right</p>    </div>
+      <h5>HPI</h5><p class="w3-text-grey">I should have set your <br> hi <br> two weeks on and off and other symptoms that accompany because <br> radical diary I could use what does that mean <br> it was pretty</p><h5>social history</h5><p class="w3-text-grey">I know it was led to the stairwell coffee beers</p><h5>MISC</h5><p class="w3-text-grey">I want to see how well this works <br> do well how are you <br> okay <br> do you see a doctor about that <br> I thought you're here because of the cost</p>    </div>
 
     <div id="Doctor Speak" class="w3-container menu w3-padding-48 w3-card">
-    <h5>instructions</h5><p class="w3-text-grey">respect work</p><h5>MISC</h5><p class="w3-text-grey">right <br> right</p>    </div>  
+    <h5>HPI</h5><p class="w3-text-grey">I set <br> two weeks symptoms <br> I use mean</p><h5>social history</h5><p class="w3-text-grey">I know coffee</p><h5>MISC</h5><p class="w3-text-grey">I want see well <br> well <br> see doctor <br> I thought cost</p>    </div>
     <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
