--- a/scriboto-app/templates/results.html
+++ b/scriboto-app/templates/results.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head><link rel="scriboto icon" href="../static/favicon.ico" /></head>
 <title>Scriboto Results</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
