--- a/scriboto-app/templates/Start.html
+++ b/scriboto-app/templates/Start.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Scriboto Start</title>
+<head><link rel="scriboto icon" href="../static/favicon.ico" /></head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -31,7 +32,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+    <!-- <img src="../static/scriboto_logo.png" alt="Scriboto Robot Logo" height="900" width="900"> -->
   </div>
   <div class="w3-display-middle"; style="text-align:center;">
     <h1 class="w3-jumbo w3-animate-top"; style="color:black;">SCRIBOTO</h1>
