changing the look

--- a/scriboto-app/templates/results.html
+++ b/scriboto-app/templates/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="scriboto icon" href="../static/favicon.ico" /></head>
 <title>Scriboto Results</title>
+<head><link rel="scriboto icon" href="../static/favicon.ico" /></head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,7 +27,7 @@ body, html {
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s5">
-      <a href="showHome" role="button" class="w3-button w3-block w3-black">HOME</a>
+      <a href="showHome" role="button" class="w3-button w3-block w3-black">Home</a>
     </div>
   </div>
 </div>
@@ -58,11 +58,11 @@ body, html {
     </div>
 
     <div id="Transcription" class="w3-container menu w3-padding-48 w3-card">
-      <h5>HPI</h5><p class="w3-text-grey">I should have set your <br> hi <br> two weeks on and off and other symptoms that accompany because <br> radical diary I could use what does that mean <br> it was pretty</p><h5>social history</h5><p class="w3-text-grey">I know it was led to the stairwell coffee beers</p><h5>MISC</h5><p class="w3-text-grey">I want to see how well this works <br> do well how are you <br> okay <br> do you see a doctor about that <br> I thought you're here because of the cost</p>    </div>
+<h5>History of Present Illness (HPI)</h5><p class="w3-text-grey">case or something I don't know <br> destroy all my attendance very minimalistic but that makes anything on least <br> white cool <br> so when I press this it says</p><h5>Past Medical History (PMH)</h5><p class="w3-text-grey">paste</p><h5>Miscellaneous</h5><p class="w3-text-grey">we are listening <br> and it's still Fair <br> really Queen <br> that's cool I mean <br> for me it's an easy to over <br> lies</p>    </div>
 
     <div id="Doctor Speak" class="w3-container menu w3-padding-48 w3-card">
-    <h5>HPI</h5><p class="w3-text-grey">I set <br> two weeks symptoms <br> I use mean</p><h5>social history</h5><p class="w3-text-grey">I know coffee</p><h5>MISC</h5><p class="w3-text-grey">I want see well <br> well <br> see doctor <br> I thought cost</p>    </div>
-    <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;">
+<h5>History of Present Illness (HPI)</h5><p class="w3-text-grey">something <br> attendance least <br> white</p><h5>Past Medical History (PMH)</h5><p class="w3-text-grey">paste</p><h5>Miscellaneous</h5><p class="w3-text-grey">still <br> Queen</p>    </div>
+    <!-- <img src="./static/onedoctor.png" style="width:100%;max-width:1000px;margin-top:32px;"> -->
   </div>
 </div>
 
