--- a/scriboto-app/templates/Stop.html
+++ b/scriboto-app/templates/Stop.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif; font-weight: bold;}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('./static/doctor1.png');
+    /* background-image: url('./static/doctor1.png'); */
     min-height: 100%;
     background-position: center;
     background-size: cover;
@@ -38,7 +38,7 @@ function myFunction() {
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+    <img src="../static/scriboto_logo.png" alt="Scriboto Robot Logo" height="750" width="750">
   </div>
   <div class="w3-display-middle"; style="text-align:center;">
     <h1 class="w3-jumbo w3-animate-top"; style="color:black;">SCRIBOTO</h1>
